--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-fastapi==0.109.2
-uvicorn==0.23.2
+fastapi==0.115.0
+uvicorn==0.30.0
 numpy==2.3.2
-pandas==2.0.3
-scikit-learn==1.7.1
-joblib==1.3.2
+pandas==2.2.3
+scikit-learn==1.5.2
+joblib==1.4.2
+pydantic==2.8.2
